cluster/apps/applications/traggo/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traggo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  template:
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: traggo
          image: traggo/server:arm-7-0.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3030
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/traggo/data
              name: traggo-data

      volumes:
        - name: traggo-data
          persistentVolumeClaim:
            claimName: traggo-data-claim
