cluster/apps/applications/traggo/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traggo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traggo.home.es.
    external-dns.alpha.kubernetes.io/target: home.es.
spec:
  rules:
    - host: traggo.home.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traggo
                port:
                  name: http
